--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,25 +1,123 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
+  margin: 0;
+  padding: 0;
+  /* height: 100vh; */
+  overflow: hidden;
   background-image: url(../images/bg.png);
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  /* height: 100svh; */
 }
 
 .experiment-area {
-  margin-top: auto;
-  height: 50vh;
+  margin: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    " cylinder cylinder microwave"
+    " beakers beakers microwave ";
+  align-items: end;
+  row-gap: 100px;
 }
 
-.chamber {
-  width: 500px;
+.experiment-area > * {
+  flex-grow: 1;
+}
+
+/* .sediment-agent {
+  grid-area: sediment;
+  transform: translate(0, 120px);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.sediment-agent > img {
+  width: 100px;
+}
+
+.sediment-agent > img:nth-child(5) {
+  grid-column: 2;
+} */
+
+.measuring-cylinder {
+  grid-area: cylinder;
+  display: flex;
+  /* align-self: self-start; */
+  gap: 50px;
+}
+
+.measuring-cylinder > span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.beakers {
+  grid-area: beakers;
+  display: grid;
+  /* grid-template-rows: 1fr 1fr; */
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 10px;
+}
+
+/* .beakers > img {
+  width: 100px;
+} */
+
+/* .mortar-pestle {
+  grid-area: mortar;
+  justify-self: center;
+}
+
+.mortar-pestle > img {
+  width: 100px;
+} */
+
+.microwave {
+  grid-area: microwave;
+  justify-self: self-end;
+}
+
+.shake {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+}
+
+.instruction {
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  width: 30%;
+  max-width: 30%;
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+}
+
+.accordion-item {
+  margin-bottom: 8px;
+}
+
+.accordion-title {
+  cursor: pointer;
+  padding: 8px;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.accordion-content {
+  background-color: white;
+  display: none;
+  padding: 8px;
+  border-top: 1px solid #ddd;
 }
