--- a/experiment/simulation/css/beaker.css
+++ b/experiment/simulation/css/beaker.css
@@ -46,11 +46,11 @@
 
 #nhcl::after {
   content: attr(data-after);
+  text-align: center;
+  width: 100%;
   position: absolute;
-  /* width: 50px; */
-  /* height: 100px; */
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 #nhcl > .sediment {
@@ -59,11 +59,11 @@
 
 #ethanol::after {
   content: "Ethanol";
+  text-align: center;
   position: absolute;
-  /* width: 50px; */
-  /* height: 100px; */
+  width: 100%;
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 #ethanol > .sediment {
@@ -72,11 +72,11 @@
 
 #aspirin::after {
   content: "Aspirin";
+  text-align: center;
+  width: 100%;
   position: absolute;
-  /* width: 50px; */
-  /* height: 100px; */
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 #aspirin > .sediment {
