--- a/experiment/simulation/css/cylinder.css
+++ b/experiment/simulation/css/cylinder.css
@@ -23,30 +23,34 @@
 }
 
 #zero::after {
-  content: "0";
+  content: "0 MIN";
+  text-align: center;
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 #ten::after {
-  content: "10";
+  content: "10 MIN";
+  text-align: center;
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 #twenty::after {
-  content: "20";
+  content: "20 MIN";
+  text-align: center;
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 #thirty::after {
-  content: "30";
+  content: "30 MIN";
+  text-align: center;
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 0;
 }
 
 .cylinder-stand {
